--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,8 +19,15 @@ jobs:
     - name: Build
       run: |
         cd lang
-        cargo build --verbose
+        cargo build --release --verbose
     - name: Run tests
       run: |
         cd lang
         cargo test --verbose
+      
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-artifact
+        path: |
+          lang/target/release/modu
