--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,6 +12,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    steps:
     - name: Run tests
       run: |
         cd lang
@@ -19,6 +20,7 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
+    steps:
     - name: Build for Linux
       run: |
         cd lang
