--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,6 +28,9 @@ jobs:
         cd lang
         cargo build --release --verbose
     
+    - name: Install Windows target
+      run: rustup target add x86_64-pc-windows-gnu
+
     - name: Build for Windows
       run: |
         cd lang
