--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,10 @@ jobs:
         cargo build --release --verbose
     
     - name: Install Windows target
-      run: rustup target add x86_64-pc-windows-gnu
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y mingw-w64
+        rustup target add x86_64-pc-windows-gnu
 
     - name: Build for Windows
       run: |
