--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,11 +28,14 @@ jobs:
         cd lang
         cargo build --release --verbose
     
-    - name: Install Windows target
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y mingw-w64
-        rustup target add x86_64-pc-windows-gnu
+  - name: Setup Toolchain
+    run: |
+      sudo apt-get update
+      sudo apt-get install -y mingw-w64
+      rustup toolchain install nightly
+      rustup default nightly
+      rustup target add x86_64-pc-windows-gnu
+
 
     - name: Build for Windows
       run: |
