--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,7 +28,7 @@ jobs:
         cd lang
         cargo build --release --verbose
     
-    - name: Setup Toolchain
+    - name: Setup for Windows
       run: |
         sudo apt-get update
         sudo apt-get install -y mingw-w64
