web fucking IDE

--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,9 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"@codemirror/lang-rust": "^6.0.1",
 		"@sveltejs/adapter-static": "^3.0.6",
+		"codemirror": "^6.0.1",
 		"lucide-svelte": "^0.468.0",
 		"marked": "^15.0.3"
 	}
