multiline comments, and support for '..' in syntax highlightning

--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -2,7 +2,7 @@
   "name": "modu-lang",
   "displayName": "Modu Lang",
   "description": "Syntax highlightning for the Modu Programming Language",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/cyteon/modu"
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "test-vscode": "vscode-test",
-    "install": "code --install-extension ./modu-lang-0.0.1.vsix",
+    "install": "vsce package && code --install-extension ./modu-lang-0.0.2.vsix",
     "vsce": "vsce package",
     "test": "npm run vsce && npm run install"
   },
